--- a/app/src/main/res/layout/style_item.xml
+++ b/app/src/main/res/layout/style_item.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cb_style"
-    android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:autoSizeMaxTextSize="15dp"
-    android:autoSizeMinTextSize="10dp"
-    android:autoSizeTextType="uniform"
-    android:background="@drawable/custom_style_button"
-    android:button="@null"
-    android:gravity="center"
-    android:lines="1"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp"
-    android:stateListAnimator="@null"
-    android:textColor="@color/colorAccent"
-    tools:ignore="SpUsage,UnusedAttribute" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data />
+
+    <CheckBox
+        android:id="@+id/cb_style"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:autoSizeMaxTextSize="15dp"
+        android:autoSizeMinTextSize="10dp"
+        android:autoSizeTextType="uniform"
+        android:background="@drawable/custom_style_button"
+        android:button="@null"
+        android:gravity="center"
+        android:lines="1"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:stateListAnimator="@null"
+        android:textColor="@color/colorAccent"
+        tools:ignore="SpUsage,UnusedAttribute" />
+</layout>
